# zephyr-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  Kconfig  README.md
blinky/: CMakeLists.txt
blinky/src/: main.c
crates/.cargo/: config.toml
crates/zephyr-alloc/: Cargo.toml  rust-toolchain.toml
crates/zephyr-alloc/src/: lib.rs
crates/zephyr-sys/: Cargo.toml  rust-toolchain.toml  wrapper.h
crates/zephyr-sys/src/: lib.rs  log.rs
examples/blinky/: prj.conf
examples/blinky/src/: main.c
examples/hello-world/: CMakeLists.txt  Cargo.toml  prj.conf
examples/hello-world/src/: lib.rs  main.c
hello-world/: CMakeLists.txt  Cargo.toml
hello-world/src/: lib.rs  main.c
tools/zephyr-bindgen/: Cargo.toml
tools/zephyr-bindgen/src/: main.rs
xtask/: Cargo.toml
xtask/src/: bindgen.rs  main.rs
zephyr/: module.yml
